API improvements:
-Add an event for when an account's balance changes
-Add a way to retrieve which mod GE is currently bridging to, if any.
-Add a way for developers to register their own economy bridges.