@@ -43,6 +43,8 @@ minecraft {
 dependencies {
     provided 'org.spongepowered:spongeapi:7.1.0'
     provided group: "com.forgeessentials", name: "forgeessentials", version: "1.4.4-SNAPSHOT", classifier: "dev", changing: true
+    provided "org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT"
+    provided group: "net.milkbowl.vault", name: "VaultAPI", version: "1.5"
 }
 
 repositories {
@@ -59,6 +61,10 @@ repositories {
 		name = "sk89q"
 		url = "http://maven.sk89q.com/repo/"
 	}
+	//Spigot
+	maven { url = ("https://hub.spigotmc.org/nexus/content/groups/public/") }
+	// Vault
+	maven { url 'http://nexus.hc.to/content/repositories/pub_releases' }
 }
 
 processResources
